--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,8 @@
 <body>
 <h1>Weather Data API</h1>
 <p>URL format: http://127.0.0.1:5000/api/v1/station/date</p>
-<p>URL Example http://127.0.0.1:5000/api/v1/14/19930930</p>
+<p>URL Example http://127.0.0.1:5000/api/v1/14/1993-09-30</p>
+
+
 </body>
 </html>
