Add URL Endpoints for yearly and all data

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,9 @@
 <body>
 <h1>Weather Data API</h1>
 <p>URL format: http://127.0.0.1:5000/api/v1/station/date</p>
-<p>URL Example http://127.0.0.1:5000/api/v1/14/1993-09-30</p>
+<p>For one station, one date: http://127.0.0.1:5000/api/v1/16/1993-09-30</p>
+<p>For one station, all dates: http://127.0.0.1:5000/api/v1/16</p>
+<p>For one station, one year: http://127.0.0.1:5000/api/v1/yearly/16/1993</p>
 <p>{{data|safe}}</p>
 </body>
 </html>
